<resources>
    <string name="app_name">YUE</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="usernamehint">手机号</string>
    <string name="passwordhint">密码</string>
    <string name="registerinfo">YUE暂不支持注册,如需体验请联系偶,谢谢!^_^</string>
    <string name="infr">确定</string>
    <string name="message">消息</string>
    <string name="contacts">联系人</string>
    <string name="moments">发现</string>
    <string name="service">活动</string>
    <string name="canlelogin">取消</string>
    <string name="forgetpassword">忘记密码？</string>
    <string name="remembername">记住密码</string>
    <string name="sp20">20sp</string>
    <string name="joinfridend">添加好友</string>
    <string name="creatgroup">创建群组</string>
    <string name="twoweima">扫一扫</string>
    <string name="forhelp">帮助</string>
    <string name="startchat">发起聊天</string>
    <string name="settings">设置</string>
    <string name="userheart">一生至少该有一次为了某个人而忘了自己,不求同行,不求曾经拥有 甚至不求你爱我 只求在最美的年华里遇到你</string>
    <string name="username">只求在最美的年华里遇到你!</string>
    <string name="dengji">等级:11</string>
    <string name="faillogin">登录失败,请检查您的的用户名和密码!</string>
    <string name="nullpoint">用户名和密码均不能为空,请仔细检查!</string>
    <string name="exit">退出</string>
    <string name="Search">搜索</string>
    <string name="No_friends">暂无好友</string>
    <string name="new_friends">新的朋友</string>
    <string name="group">群组</string>
    <string name="public_service">公众号</string>
    <string name="chat">发起会话</string>
    <string name="yuyin">语音聊天</string>
    <string name="shipin">视频聊天</string>
    <string name="setuserinfo">资料编辑</string>
    <string name="aboutyue">关于yue</string>
    <string name="check_new_version">检查更新</string>
    <string name="setusericon">设置头像</string>
    <string name="setuserdisplay">设置签名</string>
    <string name="nickname">昵称</string>
    <string name="age">年龄</string>
    <string name="sex">性别</string>
    <string name="birtyday">生日</string>
    <string name="company">公司/单位</string>
    <string name="job">职业</string>
    <string name="mail">邮箱</string>
    <string name="address">所在地址</string>
    <string name="homefamily">家乡</string>
    <string name="changethem">切换主题</string>
    <string name="addressconfi">详细地址</string>
    <string name="friend_circle">朋友圈</string>
    <string name="yuecheng">悦城</string>
    <string name="scanlocalpic">扫描本地图片</string>
    <string name="getcode">获取验证码</string>
    <string name="next_step">下一步</string>
    <string name="writecode">填入验证码</string>
    <string name="set_newpassword">设置新的密码</string>
    <string name="set_newpasswordfir">确认新的密码</string>
    <string name="register_protocol">点击下一步即表示同意《yue服务协议》</string>
    <string name="set_password">设置密码</string>
    <string name="corfim_password">确认密码</string>
    <string name="message_code_isconfir">重新获取验证码</string>
    <string name="search_phone_number">请输入将要查找的手机号码</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
</resources>
