<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/Search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_startchat"
        android:icon="@mipmap/ic_launcher"
        android:orderInCategory="100"
        android:title="@string/startchat"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_joinfriend"
        android:icon="@mipmap/ic_launcher"
        android:orderInCategory="100"
        android:title="@string/joinfridend"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_creategroup"
        android:icon="@mipmap/ic_launcher"
        android:orderInCategory="100"
        android:title="@string/creatgroup"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_qrcode"
        android:icon="@mipmap/ic_launcher"
        android:orderInCategory="100"
        android:title="@string/twoweima"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_forhelp"
        android:icon="@mipmap/ic_launcher"
        android:orderInCategory="100"
        android:title="@string/forhelp"
        app:showAsAction="never" />
</menu>
