<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:id="@+id/leftmenu_header_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp160"
        android:background="?attr/dialogTextColor">

        <LinearLayout
            android:id="@+id/user"
            android:layout_width="@dimen/dp100"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/dp16"
            android:gravity="center"
            android:orientation="vertical">

            <com.yuecheng.yue.widget.YUE_CircleImageView
                android:id="@+id/usericon"
                android:layout_width="@dimen/dp56"
                android:layout_height="@dimen/dp56"
                android:src="@mipmap/yue"/>

            <TextView
                android:id="@+id/usernickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/username"
                android:textColor="@color/white"/>
        </LinearLayout>

        <TextView
            android:id="@+id/userheart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:layout_marginTop="@dimen/dp32"
            android:layout_toRightOf="@id/user"
            android:ellipsize="end"
            android:lines="2"
            android:text="@string/userheart"
            android:textColor="@color/white"
            android:textSize="@dimen/sp12"/>

        <TextView
            android:id="@+id/dengji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userheart"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:layout_toRightOf="@id/user"
            android:text="@string/dengji"
            android:textColor="@color/white"
            android:textSize="@dimen/sp12"
            />
    </RelativeLayout>
</merge>
